gitops/apps/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/instance: headlamp
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/instance: headlamp

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
