gitops/apps/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-cloudflare
spec:
  parentRefs:
    - name: traefik
      namespace: gateway-system
  hostnames:
    - "headlamp.ismola.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
