gitops/apps/headlamp/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-cloudflare
spec:
  ingressClassName: traefik

  rules:
    - host: headlamp.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
