gitops/apps/headlamp/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-tailnet
  annotations:
    tailscale.com/proxy-class: stable-proxies
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: headlamp
      port:
        number: 80
  tls:
    - hosts:
        - headlamp
